# value-steward

./: .env.example  .eslintrc.cjs  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  CLAUDE.md  CONTRIBUTING.md  DEVICE_INSTANTIATION_INSTRUCTIONS.txt  Dockerfile  GEMINI.md  LICENSE  README.md  SECURITY.md  SYSTEM_MECHANICS.md  architectural review day 2.txt  crontab  docker-compose.yml  heartbeat.json  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  runValueSteward.js  security_best_practices_report.md  value-steward-dataflow.html
.github/: dependabot.yml
config/: macro-policy.json  policy.json  sector-map.json
core/: agentState.js  alpacaRestClient.js  championChallenger.js  channelHealth.js  decisionReview.js  deepTrainer.js  emailHealth.js  emailNotifications.js  evalMetrics.js  executionQualityReport.js  gateCalibration.js  githubFiles.js  gpioBridge.js  healthStatus.js  intentReconciliation.js  localFiles.js  localTrainer.js  modes.js  oosEvaluator.js  phase1Window.js  phaseReset.js  policySnapshot.js  policyValidator.js  promotionMetrics.js  pushHealth.js  pushNotifications.js  pushTriggers.js  runValueSteward.js  runtimeArtifacts.js  scoreGatePosteriors.js  scorecardTrainer.js  signalWeightTrainer.js  stats.js  stewardState.js  systemLogicExplanation.js  tick.js  timeUtils.js  tradeGate.js  tradingEnabled.js  trainingMode.js  (+2 more)
data/: agent-state.json  control-state.json  eod-state.json  execution-state.json  history.jsonl  latest-tick.json  schema.sql  scorecard-summary.json  world-inbox.jsonl  (+4 more)
(+210 files in other folders)
