[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "value-steward"
version = "0.1.0"
description = "Risk-aware portfolio steward using Alpaca paper trading"
authors = [{ name = "Placeholder Name", email = "placeholder@example.com" }]
requires-python = ">=3.10"

[project.scripts]
valuesteward = "valuesteward.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false
no_implicit_optional = true
